Added The Functionalities

--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,8 @@
 
 /* Style the image inside the centered container, if needed */
 .leftImage {
-  width: 10%;
-  height: 20%;
+  width: 8%;
+  height: 8%;
   border-radius: 50%;
 }
 
@@ -26,11 +26,15 @@
 /* Control the left side */
 .left {
   left: 10px;
-  top:10%
+  top:10%;
+  min-width: 300px;
+  max-width: 800px;
 }
 
 /* Control the right side */
 .right {
-  top:5%;
+  top:100px;
   right: 0;
+  min-width: 300px;
+  max-width: 800px;
 }
